--- a/signup.html
+++ b/signup.html
@@ -73,7 +73,7 @@
             <div class="card-body px-4 py-5 px-md-5">
               <form action="Home( af signin).html">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
-                <div class="row">
+                <div class="row" align="center">
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
                       <input type="text" id="form3Example1" class="form-control" />
