--- a/Home( af signin).html
+++ b/Home( af signin).html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/style3.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href ="css/style.css">
+    <link rel="stylesheet" href ="/css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-light.bg border-bottom" style="background-color: bisque;" >
+  <nav class="navbar navbar-expand-lg bg-light.bg border-bottom"  >
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Imaginary Hub</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="Home( af signin).html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
@@ -33,12 +33,12 @@
               Resources
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Notes</a></li>
+              <li><a class="dropdown-item" href=".notes.html">Notes</a></li>
               <li><a class="dropdown-item" href="#">College Review</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Logout <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+            <a class="nav-link active" aria-current="page" href="index.html">Logout  <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
           </li> 
         </ul>
       </div>
@@ -55,14 +55,17 @@
                   <h2><span class="auto-type" style="font-weight: bolder; color: black;"></span></h2>
                   <br>
                   <h2>->we make Your learning Journey special</h2><br>
-                 <ul> <a href="course.html">Join Now</a><br></ui>
+                  <a href="course.html"><button type="button" class="btn btn-primary">Join Now  <i class="fa-solid fa-angles-right"></i>  </button></a> <br><br>
                 </div>
               </div>              
             <br>
             <br>
         </section>
         <br>
-        <section class="numbers" style="background-color: azure;">
+        <section class="numbers" style="background-color: #f8f8fd;
+        border-color: #f8f8fd;
+        margin: 1%;
+        padding: 2%;">
             <div class="contain">
                 <div align="center">
                   <h2 >We teach coding in a simple way</h2>
@@ -104,7 +107,7 @@
             <br><br>
             <p align="center">Classes starts from 1st of November</p>
             <br><br>
-            <button type="button" class="btn btn-primary">Explore  <i class="fa-solid fa-angles-right"></i>  </button> <br><br>
+            <a href="course.html"><button type="button" class="btn btn-primary">Explore  <i class="fa-solid fa-angles-right"></i>  </button></a> <br><br>
         </section>
         <br>
         <br>
@@ -113,7 +116,7 @@
             <div align="center">
             <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
-        <section class="joinus" style="max-width:100%;height:auto; background-color: bisque;">
+        <section class="joinus">
             <div align="center">
             <h3 ><i>Join us on</i></h3>
            <h3 ><span class="auto-type1" style="font-weight: lighter;font-style: italic;"></span></h3><br>
@@ -131,7 +134,8 @@
             </div>
         </section>
         <br>
-        <section style="background-color: bisque; margin: 2%;">
+        <section class="" style="margin: 1%;
+        padding: 4em 2%;">
         <div class="container text-center" >
           <div class="row align-items-start">
             <div class="col">
@@ -141,7 +145,7 @@
             <div class="col" align="center">
               <h5>Helpful Links</h5>
               <div >
-                <a href="index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+                <a href="course.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
                 <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
                 <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
                 <a href="terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
