--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuanTum Studio's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/style3.css" rel="stylesheet"/>
+    <link href="css/style3.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href ="css/style.css">
+    <link rel="stylesheet" href ="/css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-light.bg border-bottom" style="background-color: bisque;" >
+  <nav class="navbar navbar-expand-lg bg-light.bg border-bottom"  >
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Imaginary Hub</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="index1.html">Quanta Course</a></li>
+              <li><a class="dropdown-item" href="/index1.html">Quanta Course</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -58,14 +58,17 @@
                   <h2><span class="auto-type" style="font-weight: bolder; color: black;"></span></h2>
                   <br>
                   <h2>->we make Your learning Journey special</h2><br>
-                 <ul> <a href="signin.html">->Sign in</a><br></ui>
+                  <a href="signin.html"><button type="button" class="btn btn-primary">Signin   <i class="fa-solid fa-angles-right"></i>  </button></a> <br><br>
                 </div>
               </div>              
             <br>
             <br>
         </section>
         <br>
-        <section class="numbers" style="background-color: azure;">
+        <section class="numbers" style="background-color: #f8f8fd;
+        border-color: #f8f8fd;
+        margin: 1%;
+        padding: 2%;">
             <div class="contain">
                 <div align="center">
                   <h2 >We teach coding in a simple way</h2>
@@ -107,7 +110,7 @@
             <br><br>
             <p align="center">Classes starts from 1st of November</p>
             <br><br>
-            <button type="button" class="btn btn-primary">Explore  <i class="fa-solid fa-angles-right"></i>  </button> <br><br>
+            <a href="signup.html"><button type="button" class="btn btn-primary">Explore  <i class="fa-solid fa-angles-right"></i>  </button></a> <br><br>
         </section>
         <br>
         <br>
@@ -116,7 +119,7 @@
             <div align="center">
             <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
-        <section class="joinus" style="max-width:100%;height:auto; background-color: bisque;">
+        <section class="joinus">
             <div align="center">
             <h3 ><i>Join us on</i></h3>
            <h3 ><span class="auto-type1" style="font-weight: lighter;font-style: italic;"></span></h3><br>
@@ -134,7 +137,8 @@
             </div>
         </section>
         <br>
-        <section style="background-color: bisque; margin: 2%;">
+        <section class="" style="margin: 1%;
+        padding: 4em 2%;">
         <div class="container text-center" >
           <div class="row align-items-start">
             <div class="col">
