--- a/refund.html
+++ b/refund.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Refund & Cancellation Policy</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="css/style3.css" rel="stylesheet"/>
+  <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href ="css/style4.css">
   <style>
     body {
@@ -24,29 +27,7 @@
 </head>
 
 <body>
-    <header class="header" >
-        <div class="nav">
-            <a href="index.html">
-              <ul><h3>Imaginary Hub</h3></ul>
-            </a>
-            <nav class="navbar">
-              <div class="hamburger-menu">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-              </div>
-              <div class="menu-overlay">
-                <div class="close-button">&times;</div>
-                <ul class="overlay-menu">
-                  <li><a href="index.html" >Home</a></li><br>
-                  <li><a href="course.html" >Courses</a></li><br>
-                  <li><a href="signin.html" >Sign in</a></li><br>
-                </ul>
-              </div>
-            </nav>               
-          </div>          
-        <br>
-    </header>
+   
   <h1>REFUND & CANCELLATION POLICY</h1>
 
   <p>At Imaginary Hub, we strive to provide a seamless experience for our customers. However, please note the following refund and cancellation policy:</p>
@@ -61,50 +42,41 @@
 
   <h2>Contact Us</h2>
   <p>If you have any questions or concerns regarding our refund and cancellation policy, please feel free to contact our customer support team.</p>
-  <div class="container">
-    <div class="section">
-      <div class="section-title">Imaginary Hub</div>
-      <div class="section-content">
-        <p>Welcome to Imaginary Hub! We are a creative space dedicated to exploring new ideas and sparking imagination. Join us on a journey of endless possibilities.</p>
+  <div class="container text-center" style="margin: 1%;
+  padding: 4em 2%;" >
+    <div class="row align-items-start">
+      <div class="col">
+        <h3><i>Imaginary</i> Hub</h3>
+        <P>Welcome to Imaginary Hub! We are a creative space dedicated to exploring new ideas and sparking imagination. Join us on a journey of endless possibilities.</P>
       </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">Contact Us</div>
-      <div class="section-content">
-        <p>> Feel free to reach out to us for any inquiries or feedback. We'd love to hear from you!</p>
-        <p>> Email: thejabirhussain@gmail.com</p>
-        <p>> Phone: 123-456-7890</p>
+      <div class="col" align="center">
+        <h5>Helpful Links</h5>
+        <div >
+          <a href="course.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+          <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
+          <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
+          <a href="terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
+        </div>
       </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">Helpful Links</div>
-      <div class="section-content">
-        <ul>
-            <li><a href="refund.html">> Refund & cancelation Policy</a></li>
-            <li><a href="terms.html">> Terms of Service</a></li>
-            <li><a href="Privacy.html">> Privacy Policy</a></li>
-        </ul>
+      <div class="col" align="center">
+        <h5>Get In Touch</h5>
+        <p><i class="fa-solid fa-envelope"></i> thejabirhussain@gmail.com</p>
+        <p><i class="fa-solid fa-envelope"></i> workspace@gmail.com</p>
       </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">Connect with Us</div>
-      <div class="section-content">
-        <ul>
-          <li><a href="#">> youtube</a></li>
-          <li><a href="#">> Instagram</a></li>
-          <li><a href="#">> Linkedin</a></li>
-        </ul>
+      <div class="col" align="center">
+        <h5>Connect With Us</h5>
+        <a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a><br>
+        <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a><br>
+        <a href="#"><i class="fa-brands fa-linkedin"></i> Linkedin</a><br>
       </div>
     </div>
   </div>
-<br>
-<br>
-<footer>
-  <p align="center"><i>Copy Right 2023</i></p>
-</footer>
+  <br>
+  <footer>
+    <div align="center">
+      <p style="font-weight:400;">CopyRight <i class="fa-regular fa-copyright"></i> 2023</p>
+    </div>
+  </footer>
 <br>
 <br>
 <script>
