--- a/signin.html
+++ b/signin.html
@@ -69,7 +69,8 @@
           <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
           <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
   
-          <div class="card bg-glass">
+          <div class="card bg-glass " style="margin-right: 4%;
+          padding-right: 4%;">
             <div class="card-body px-4 py-5 px-md-5">
               <form action="Home( af signin).html">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
