--- a/notes.html
+++ b/notes.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quantum studio's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/style3.css" rel="stylesheet"/>
+    <link href="css/style3.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href ="/css/style.css">
+    <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light.bg border-bottom"  >
@@ -19,12 +19,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/index1.html">Quanta Course</a></li>
+                  <li><a class="dropdown-item" href="index1.html">Quanta Course</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -32,15 +32,15 @@
                   Resources
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/notes.html">Notes</a></li>
+                  <li><a class="dropdown-item" href="notes.html">Notes</a></li>
                   <li><a class="dropdown-item" href="#">College Review</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/signin.html">Login</a>
+                <a class="nav-link active" aria-current="page" href="signin.html">Login</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/signup.html">Sign up</a>
+                <a class="nav-link active" aria-current="page" href="signup.html">Sign up</a>
               </li> 
             </ul>
           </div>
@@ -56,8 +56,8 @@
               </div>
               <br>
               <diV align="center" >
-              <a href="/signup.html"><button type="button" class="btn btn-primary" style="margin-right: 5%;">SignUp   <i class="fa-solid fa-angles-right"></i>  </button></a>
-              <a href="/signin.html"><button type="button" class="btn btn-primary">Login   <i class="fa-solid fa-angles-right"></i>  </button></a></diV>
+              <a href="signup.html"><button type="button" class="btn btn-primary" style="margin-right: 5%;">SignUp   <i class="fa-solid fa-angles-right"></i>  </button></a>
+              <a href="signin.html"><button type="button" class="btn btn-primary">Login   <i class="fa-solid fa-angles-right"></i>  </button></a></diV>
             </div>              
       </section>
       <section class="" style="margin: 1%;
@@ -71,10 +71,10 @@
             <div class="col" align="center">
               <h5>Helpful Links</h5>
               <div >
-                <a href="/index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
-                <a href="/Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
-                <a href="/refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
-                <a href="/terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
+                <a href="index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+                <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
+                <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
+                <a href="terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
               </div>
             </div>
             <div class="col" align="center">
