--- a/notes af signin.html
+++ b/notes af signin.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quantum studio's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/style3.css" rel="stylesheet"/>
+    <link href="css/style3.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href ="/css/style.css">
+    <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light.bg border-bottom"  >
@@ -19,12 +19,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/Home( af signin).html">Home</a>
+                <a class="nav-link active" aria-current="page" href="Home( af signin).html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/course.html">Quanta Course</a></li>
+                  <li><a class="dropdown-item" href="course.html">Quanta Course</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -32,12 +32,12 @@
                   Resources
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/notes af signin.html">Notes</a></li>
+                  <li><a class="dropdown-item" href="notes af signin.html">Notes</a></li>
                   <li><a class="dropdown-item" href="#">College Review</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Logout  <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+                <a class="nav-link active" aria-current="page" href="index.html">Logout  <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
               </li> 
             </ul>
           </div>
@@ -60,7 +60,7 @@
                         <summary><p>Python One Shot</p></summary>
                         <div style="background-color: bisque;">
                           <p style="font-weight: 300;">Click on Download to Access Free Note <i class="fa-solid fa-heart" style="color: #1e3064;"></i></p>
-                          <a href="/notes/Python in One Shot.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
+                          <a href="notes/Python in One Shot.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                         </div>
                       </details></li>
                       <li class="list-group-item">
@@ -68,7 +68,7 @@
                           <summary>Object Oriented Programing</summary>
                           <div style="background-color: bisque;">
                             <p style="font-weight: 300;">Click on Download to Access Free Note <i class="fa-solid fa-heart" style="color: #1e3064;"></i></p>
-                            <a href="/notes/Object Oriented Programming (1) (1).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
+                            <a href="notes/Object Oriented Programming (1) (1).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                           </div>
                         </details>
                       </li>
@@ -84,7 +84,7 @@
                           <summary>Data Base Managmengt(DBMS)</summary>
                           <div style="background-color: bisque;">
                             <p style="font-weight: 300;">Click on Download to Access Free Note <i class="fa-solid fa-heart" style="color: #1e3064;"></i></p>
-                            <a href="/notes/DBMS_Notes (2).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
+                            <a href="notes/DBMS_Notes (2).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                           </div>
                         </details>
                       </li>
@@ -93,7 +93,7 @@
                           <summary>Operating System(OS) </summary>
                           <div style="background-color: bisque;">
                             <p style="font-weight: 300;">Click on Download to Access Free Note <i class="fa-solid fa-heart" style="color: #1e3064;"></i></p>
-                            <a href="/notes/Operating System Notes.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
+                            <a href="notes/Operating System Notes.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                           </div>
                         </details>
                       </li>
@@ -113,10 +113,10 @@
             <div class="col" align="center">
               <h5>Helpful Links</h5>
               <div >
-                <a href="/index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
-                <a href="/Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
-                <a href="/refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
-                <a href="/terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
+                <a href="index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+                <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
+                <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
+                <a href="terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
               </div>
             </div>
             <div class="col" align="center">
