Update Home( af signin).html

--- a/Home( af signin).html
+++ b/Home( af signin).html
@@ -33,7 +33,7 @@
               Resources
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href=".notes.html">Notes</a></li>
+              <li><a class="dropdown-item" href="notes af signin.html">Notes</a></li>
               <li><a class="dropdown-item" href="#">College Review</a></li>
             </ul>
           </li>
