--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
               Resources
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/notes.html">Notes</a></li>
+              <li><a class="dropdown-item" href="notes.html">Notes</a></li>
               <li><a class="dropdown-item" href="#">College Review</a></li>
             </ul>
           </li>
