--- a/course.html
+++ b/course.html
@@ -23,7 +23,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/index1.html">Quanta Course</a></li>
+              <li><a class="dropdown-item" href="#">Quanta Course</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -31,7 +31,7 @@
               Resources
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/notes.html">Notes</a></li>
+              <li><a class="dropdown-item" href="notes af signin.html">Notes</a></li>
               <li><a class="dropdown-item" href="#">College Review</a></li>
             </ul>
           </li>
