--- a/notes af signin.html
+++ b/notes af signin.html
@@ -139,5 +139,7 @@
             <p style="font-weight:400;">CopyRight <i class="fa-regular fa-copyright"></i> 2023</p>
           </div>
         </footer> 
+     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
