Update notes af signin.html

--- a/notes af signin.html
+++ b/notes af signin.html
@@ -63,7 +63,7 @@
                           <a href="notes/Python in One Shot.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                         </div>
                       </details></li>
-                      <li class="list-group-item">
+                    <!--<li class="list-group-item">
                         <details>
                           <summary>Object Oriented Programing</summary>
                           <div style="background-color: bisque;">
@@ -71,7 +71,7 @@
                             <a href="notes/Object Oriented Programming (1) (1).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                           </div>
                         </details>
-                      </li>
+                      </li>-->
                       <li class="list-group-item"><details>
                         <summary>Computer Networks</summary>
                         <div style="background-color: bisque;">
