--- a/refund.html
+++ b/refund.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Refund & Cancellation Policy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="css/style3.css" rel="stylesheet"/>
+  <link href="/css/style3.css" rel="stylesheet"/>
   <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href ="css/style4.css">
+  <link rel="stylesheet" href ="assets/css/style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
