--- a/terms.html
+++ b/terms.html
@@ -76,10 +76,10 @@ padding: 4em 2%;" >
     <div class="col" align="center">
       <h5>Helpful Links</h5>
       <div >
-        <a href="course.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
-        <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
-        <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
-        <a href="terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
+        <a href="/course.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+        <a href="/Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
+        <a href="/refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
+        <a href="/terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
       </div>
     </div>
     <div class="col" align="center">
