--- a/course.html
+++ b/course.html
@@ -117,7 +117,7 @@
               </p>
               <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-                  <span>Read More</span>
+                  <span>Enroll Now</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
