--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Imaginary Hib</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Imaginary Hub</span></strong>. All Rights Reserved
       </div>
   </footer><!-- End Footer -->
    <!-- Vendor JS Files -->
