--- a/course.html
+++ b/course.html
@@ -38,32 +38,31 @@
       </a>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <!-- <li><a href="/Practice Web/signup.html"><button type="button" class="btn btn-outline-primary">Sign up</button></a></li> -->
-          <li><a class="nav-link scrollto active" href="Home( af signin).html">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#"><span>Course</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Quanta Course</a></li>
-            </ul>
-          </li>
+      <ul>
+        <!-- <li><a href="/Practice Web/signup.html"><button type="button" class="btn btn-outline-primary">Sign up</button></a></li> -->
+        <li><a class="nav-link scrollto active" href="Home( af signin).html">Home</a></li>
+        <li><a class="nav-link scrollto" href="#about">About</a></li>
+        <li class="dropdown"><a href="#"><span>Course</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="course.html">Quanta Course</a></li>
+          </ul>
+        </li>
 
-          <li class="dropdown megamenu"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li>
-                <a href="notes af signin.html">Notes</a>
-              </li>
-              <li>
-                <a href="#">Resources</a>
-              </li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-        <uL><li> <a class="nav-link active" aria-current="page" href="index.html">Logout  <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
-        </li></uL> 
-      </nav><!-- .navbar -->
+        <li class="dropdown megamenu"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li>
+              <a href="notes af signin.html">Notes</a>
+            </li>
+            <li>
+              <a href="#">Resources</a>
+            </li>
+          </ul>
+        </li>
+        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        <li><a class="getstarted scrollto" href="index.html">Logout  <i class="fa-solid fa-arrow-right-from-bracket"></i></a></li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
