--- a/index1.html
+++ b/index1.html
@@ -39,7 +39,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="/Practice Web/signup.html"><button type="button" class="btn btn-outline-primary">Sign up</button></a></li>
+          <li><a href="signup.html"><button type="button" class="btn btn-outline-primary">Sign up</button></a></li>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li class="dropdown"><a href="#"><span>Course</span> <i class="bi bi-chevron-down"></i></a>
