--- a/notes af signin.html
+++ b/notes af signin.html
@@ -91,7 +91,7 @@
                           <summary>Data Base Managmengt(DBMS)</summary>
                           <div style="background-color: bisque;">
                             <p style="font-weight: 300;">Click on Download to Access Free Note <i class="fa-solid fa-heart" style="color: #1e3064;"></i></p>
-                            <a href="/Practice Web/notes/DBMS_Notes (2).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
+                            <a href="notes/DBMS_Notes (2).pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Download   <i class="fa-solid fa-circle-down"></i>  </button></a> <br>
                           </div>
                         </details>
                       </li>
