--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="notes.html">Notes</a>
               </li>
               <li>
-                <a href="#">Resources</a>
+                <a href="https://mits.ac.in/">Resources</a>
               </li>
             </ul>
           </li>
