--- a/signup.html
+++ b/signup.html
@@ -111,7 +111,7 @@
   
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary btn-block mb-4">
-                  Sign in
+                  Sign up
                 </button>
   
                 <!-- Register buttons -->
